k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: asoblockchain
spec:
  selector:
    app: asoblockchain
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
