k8s/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`asoblockchain.org`)
    services:
    - kind: Service
      name: edenia
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`asoblockchain.org`)
    services:
    - kind: Service
      name: edenia
      port: 3000
  tls:
    secretName: tls-secret
